template/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:19.0.0
          args:
            - start-dev
            - --import-realm
          volumeMounts:
            - name: quakrus-realm
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: quakrus-realm
          configMap:
            defaultMode: 420
            optional: false
            name: quakrus-realm
