template/keycloak/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
