template/keycloak/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
spec:
  host: keycloak-dkwon17-che.apps.che-dev.x6e0.p1.openshiftapps.com
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
